crates/tuff_python_formatter/src/comments/snapshots/tuff_python_formatter__comments__tests__only_comments.snap
---
source: crates/tuff_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: ModModule,
        range: 0..35,
        source: `⏎`,
    }: {
        "leading": [
            SourceComment {
                text: "# Some comment",
                position: OwnLine,
                formatted: false,
            },
            SourceComment {
                text: "# another comment",
                position: OwnLine,
                formatted: false,
            },
        ],
        "dangling": [],
        "trailing": [],
    },
}
