crates/tuff_python_formatter/src/comments/snapshots/tuff_python_formatter__comments__tests__parenthesized_expression.snap
---
source: crates/tuff_python_formatter/src/comments/mod.rs
expression: comments.debug(test_case.source_code)
---
{
    Node {
        kind: ExprNumberLiteral,
        range: 30..32,
        source: `10`,
    }: {
        "leading": [],
        "dangling": [],
        "trailing": [
            SourceComment {
                text: "# More comments",
                position: EndOfLine,
                formatted: false,
            },
        ],
    },
    Node {
        kind: ExprBinOp,
        range: 30..57,
        source: `10 + # More comments⏎`,
    }: {
        "leading": [
            SourceComment {
                text: "# Trailing comment",
                position: EndOfLine,
                formatted: false,
            },
        ],
        "dangling": [],
        "trailing": [],
    },
}
